--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,30 +2,81 @@
 
 <h1>Listing Groups</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
       <th>Salle</th>
       <th>Tache</th>
+      <th>Membres</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @groups.each do |group| %>
+    <tr>
+      <td><%= group.name %></td>
+      <td><%= group.salle %></td>
+      <td><%= group.tache %></td>
+      <td></td>
+      <td><%= link_to 'Show', group %></td>
+      <td><%= link_to 'Edit', edit_group_path(group) %></td>
+      <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+    <% group.people.each do |person| %>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td><%= person.name %>
+      <%= person.sensei? ? " - Sensei" : "" %></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+      <% end %>
+      <% end %>
+    </tbody>
+  </table>
+
+  <br>
+
+  <%= link_to 'New Group', new_group_path %>
+<%= link_to 'Random' ,tata_path %>
+
+  <br>
+
+  <h1>Listing People</h1>
+
+  <table class='table table-hover'>
+    <thead>
       <tr>
-        <td><%= group.name %></td>
-        <td><%= group.salle %></td>
-        <td><%= group.tache %></td>
-        <td><%= link_to 'Show', group %></td>
-        <td><%= link_to 'Edit', edit_group_path(group) %></td>
-        <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Telephone</th>
+        <th>Group</th>
+        <th>Sensei</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @people.each do |person| %>
+      <tr>
+        <td><%= person.name %></td>
+        <td><%= person.email %></td>
+        <td><%= person.telephone %></td>
+        <td><%= person.group_id %></td>
+        <td><%= person.sensei? ? "Sensei" : "" %></td>
+        <td><%= link_to 'Show', person %></td>
+        <td><%= link_to 'Edit', edit_person_path(person) %></td>
+        <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Group', new_group_path %>
+  <br>
+
+  <%= link_to 'New Person', new_person_path %>
