add sensei in first table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,3 +30,8 @@
     border: solid 2px #fcc;
     &:first-letter { text-transform: uppercase;}
   }
+
+h1 {
+  text-align: center;
+  padding-bottom: 50px;
+}
