--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -26,4 +26,4 @@
 </p>
 
 <%= link_to 'Edit', edit_person_path(@person) %> |
-<%= link_to 'Back', people_path %>
+<%= link_to 'Back', groups_path %>
