--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,12 +8,11 @@
       <th>Name</th>
       <th>Salle</th>
       <th>Tache</th>
+      <th>Sensei</th>
       <th>Membres</th>
       <th colspan="3"></th>
     </tr>
   </thead>
-
-
 
   <tbody>
     <% @groups.each do |group| %>
@@ -21,6 +20,7 @@
       <td><%= best_in_place group, :name %></td>
       <td><%= best_in_place group, :salle %></td>
       <td><%= best_in_place group, :tache %></td>
+      <td><%=  group.maitre %></td>
       <td></td>
       <td><%= link_to 'Show', group %></td>
       <td><%= link_to 'Edit', edit_group_path(group) %></td>
@@ -28,6 +28,7 @@
     </tr>
     <% group.people.each do |person| %>
     <tr>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -45,7 +46,7 @@
   <br>
 
   <%= link_to 'New Group', new_group_path %>
-<%= link_to 'Random' ,dunno_path %>
+<%= link_to 'Random' , dunno_path %>
 
   <br>
 
@@ -69,8 +70,10 @@
         <td><%= person.name %></td>
         <td><%= person.email %></td>
         <td><%= person.telephone %></td>
-        <td><%= best_in_place person, :group_id , :as => :select, :collection => (Group.all.to_a.map {|x| [ x.name, x.id]}) %></td>
+        <td><%= best_in_place person, :group_id %></td>
         <td><%= person.sensei? ? "Sensei" : "" %></td>
+        <td><%= best_in_place person, :sensei, as: :checkbox, collection: {false: "Nope", true: "Yep"} %></td>
+
         <td><%= link_to 'Show', person %></td>
         <td><%= link_to 'Edit', edit_person_path(person) %></td>
         <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
